create login page and update site structure & styling

--- a/styles.css
+++ b/styles.css
@@ -2,25 +2,48 @@ body {
   background: #fafafa;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #212121;
+  margin: 0;
+}
+body hr {
+  margin-bottom: 21px;
+  border-top: 0;
+  border-color: #d4d4d4;
+}
+body a {
+  color: #212121;
+}
+body input[type=submit]:hover {
+  cursor: pointer;
 }
 
-h1 {
+header {
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding: 25px 0 30px;
+  border-bottom: 2px solid #a3a3a3;
+  background: #fff;
+}
+header h1 {
   color: burlywood;
   font-size: 2.5rem;
   text-align: center;
+  margin: 0;
 }
-h1 span {
+header h1 span {
   color: bisque;
 }
-h1 .line {
+header h1 .logo-slash {
   font-weight: 300;
-  color: #a3a3a3;
+  color: #404040;
+}
+header h1 .logo-text-gray {
+  color: #94a3b8;
 }
 
 nav {
   display: flex;
   justify-content: center;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
 }
 nav ul {
   list-style: none;
@@ -48,10 +71,67 @@ nav ul li a:active {
   color: #efefef;
 }
 
+#page-title {
+  display: flex;
+}
+#page-title h2 {
+  display: inline-block;
+  margin: 0 auto 42px;
+  font-size: 2rem;
+  text-align: center;
+  color: #0891b2;
+  padding-bottom: 32px;
+  border-bottom: 1px solid #d4d4d4;
+}
+
 article {
-  width: 75%;
+  box-sizing: border-box;
+  width: 80%;
+  padding: 22px 40px;
   margin: 0 auto 35px;
+  background-color: white;
+  border: 2px solid #cbd5e1;
+  background-color: #fff;
+  border-radius: 3px;
 }
 article p {
   padding-bottom: 1.5%;
+}
+article p:last-of-type {
+  padding-bottom: 0;
+}
+
+section {
+  padding: 0 30px;
+}
+
+form {
+  max-width: 500px;
+  padding: 2rem 10px;
+  box-sizing: border-box;
+  margin: auto;
+  border: 1px solid #cbd5e1;
+  background-color: #fff;
+}
+form div {
+  display: flex;
+  margin: 0 0 1rem 0;
+}
+form div label, form div input {
+  width: 60%;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  justify-content: space-between;
+  font-size: 1.1rem;
+}
+form div label {
+  text-align: right;
+  width: 30%;
+}
+form div input {
+  border: 2px solid #e2e8f0;
+  border-radius: 2px;
+}
+form div:last-of-type input {
+  margin: 10px auto 0;
 }/*# sourceMappingURL=styles.css.map */
