--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,10 @@ body {
 body hr {
   margin-bottom: 21px;
   border-top: 0;
-  border-color: #d4d4d4;
+  border-color: #d4d4d4 !important;
+}
+body h3 {
+  margin-bottom: 20px;
 }
 body a {
   color: #212121;
@@ -24,13 +27,13 @@ header {
   background: #fff;
 }
 header h1 {
-  color: burlywood;
+  color: #bf4080;
   font-size: 2.5rem;
   text-align: center;
   margin: 0;
 }
 header h1 span {
-  color: bisque;
+  color: #cf649a;
 }
 header h1 .logo-slash {
   font-weight: 300;
@@ -80,7 +83,7 @@ nav ul li a:active {
   font-size: 2rem;
   text-align: center;
   color: #0891b2;
-  padding-bottom: 32px;
+  padding: 0 30px 32px;
   border-bottom: 1px solid #d4d4d4;
 }
 
@@ -95,10 +98,19 @@ article {
   border-radius: 3px;
 }
 article p {
-  padding-bottom: 1.5%;
+  padding-bottom: 4px;
 }
 article p:last-of-type {
   padding-bottom: 0;
+}
+article ul {
+  padding-left: 14px;
+}
+article ul li {
+  margin-bottom: 8px;
+}
+article hr {
+  margin: 20px 0;
 }
 
 section {
@@ -107,7 +119,7 @@ section {
 
 form {
   max-width: 500px;
-  padding: 2rem 10px;
+  padding: 45px 0;
   box-sizing: border-box;
   margin: auto;
   border: 1px solid #cbd5e1;
@@ -115,23 +127,59 @@ form {
 }
 form div {
   display: flex;
-  margin: 0 0 1rem 0;
+  margin-bottom: 30px;
 }
 form div label, form div input {
-  width: 60%;
   padding: 0.5rem;
   box-sizing: border-box;
   justify-content: space-between;
   font-size: 1.1rem;
 }
 form div label {
-  text-align: right;
   width: 30%;
+  text-align: right;
 }
 form div input {
+  width: 60%;
   border: 2px solid #e2e8f0;
   border-radius: 2px;
 }
+form div:last-of-type {
+  margin-bottom: 0;
+}
 form div:last-of-type input {
-  margin: 10px auto 0;
+  width: 55%;
+  margin: 0 auto;
+  padding: 15px 0 18px;
+  font-weight: 600;
+  font-size: 17px;
+  text-transform: uppercase;
+}
+
+@media only screen and (max-width: 400px) {
+  article hr {
+    width: 225px;
+  }
+  form {
+    padding: 22px 10px 38px;
+  }
+  form div {
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 80%;
+  }
+  form div label, form div input {
+    width: 100%;
+    text-align: left;
+    padding-left: 0;
+    margin-bottom: 4px;
+  }
+  form div input {
+    padding-left: 8px;
+  }
+  form div:last-of-type input {
+    text-align: center;
+    padding-left: 0;
+    margin-top: 20px;
+  }
 }/*# sourceMappingURL=styles.css.map */
