--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,5 @@
 $text-alignment: center;
-$paragraph-padding: 1.5%;
+$paragraph-padding: 4px;
 
 body {
   background: #fafafa;
@@ -10,7 +10,11 @@ body {
   hr {
     margin-bottom: 21px;
     border-top: 0;
-    border-color: #d4d4d4;
+    border-color: #d4d4d4 !important;
+  }
+
+  h3 {
+    margin-bottom: 20px;
   }
 
   a {
@@ -30,13 +34,13 @@ header {
   background: #fff;
   
   h1 {
-    color: burlywood;
+    color: #bf4080;
     font-size: 2.5rem;
     text-align: $text-alignment;
     margin: 0;
   
     span {
-      color: bisque;
+      color: #cf649a;
     }
 
     .logo-slash {
@@ -96,7 +100,7 @@ nav {
     font-size: 2rem;
     text-align: center;
     color: #0891b2;
-    padding-bottom: 32px;
+    padding: 0 30px 32px;
     border-bottom: 1px solid #d4d4d4;
   }
 }
@@ -118,6 +122,19 @@ article {
       padding-bottom: 0;
     }
   }
+
+  ul {
+    padding-left: 14px;
+
+    li {
+      margin-bottom: 8px;
+    }
+  }
+
+
+  hr {
+    margin: 20px 0;
+  }
 }
 
 section {
@@ -126,7 +143,7 @@ section {
 
 form {
   max-width: 500px;
-  padding: 2rem 10px;
+  padding: 45px 0;
   box-sizing: border-box;
   margin: auto;
   border: 1px solid #cbd5e1;
@@ -134,30 +151,70 @@ form {
 
   div {
     display: flex;
-    margin: 0 0 1rem 0;
+    margin-bottom: 30px;
 
     label, input {
-      width: 60%;
       padding: 0.5rem;
       box-sizing: border-box;
       justify-content: space-between;
       font-size: 1.1rem;
     }
-
+    
     label {
-      // width: 25%;
-      text-align: right;
       width: 30%;
+      text-align: right;
     }
-
+    
     input {
-      // width: 75%;
+      width: 60%;
       border: 2px solid #e2e8f0;
       border-radius: 2px;
     }
 
-    &:last-of-type input {
-      margin: 10px auto 0;
+    &:last-of-type {
+      margin-bottom: 0;
+
+      input {
+        width: 55%;
+        margin: 0 auto;
+        padding: 15px 0 18px;
+        font-weight: 600;
+        font-size: 17px;
+        text-transform: uppercase;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  article hr {
+    width: 225px;
+  }
+
+  form {
+    padding: 22px 10px 38px;
+
+    div {
+      flex-wrap: wrap;
+      margin: 0 auto;
+      width: 80%;
+  
+      label, input {
+        width: 100%;
+        text-align: left;
+        padding-left: 0;
+        margin-bottom: 4px;
+      }
+
+      input {
+        padding-left: 8px;
+      }
+  
+      &:last-of-type input {
+        text-align: center;
+        padding-left: 0;
+        margin-top: 20px;
+      }
     }
   }
 }
