--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,6 @@ body {
   color: #212121;
   margin: 0;
 }
-body hr {
-  margin-bottom: 21px;
-  border-top: 0;
-  border-color: #d4d4d4 !important;
-}
 body h3 {
   margin-bottom: 20px;
 }
@@ -46,29 +41,33 @@ header h1 .logo-text-gray {
 nav {
   display: flex;
   justify-content: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
-nav ul {
+nav div {
+  padding: 0 20px 10px;
+  border-bottom: 1px solid #d4d4d4;
+}
+nav div ul {
   list-style: none;
   padding: 0;
 }
-nav ul li {
+nav div ul li {
   display: inline-block;
   position: relative;
 }
-nav ul li a {
+nav div ul li a {
   color: #737373;
   display: block;
   padding: 8px 12px;
   border-radius: 5%;
   text-decoration: none;
 }
-nav ul li a:hover, nav ul li a:focus {
+nav div ul li a:hover, nav div ul li a:focus {
   transition: 1s linear;
   background: #525252;
   color: #fafafa;
 }
-nav ul li a:active {
+nav div ul li a:active {
   background: bisque;
   border-color: #666;
   color: #efefef;
@@ -141,6 +140,7 @@ form div label {
 }
 form div input {
   width: 60%;
+  margin-right: 12%;
   border: 2px solid #e2e8f0;
   border-radius: 2px;
 }
@@ -156,12 +156,33 @@ form div:last-of-type input {
   text-transform: uppercase;
 }
 
+@media only screen and (max-width: 820px) {
+  article {
+    width: 85%;
+  }
+  form {
+    max-width: 380px;
+  }
+}
+@media only screen and (max-width: 560px) {
+  form {
+    width: 360px;
+  }
+  form div input {
+    margin-right: 0;
+    width: 65%;
+  }
+}
 @media only screen and (max-width: 400px) {
+  nav div {
+    width: 100%;
+  }
   article hr {
     width: 225px;
   }
   form {
     padding: 22px 10px 38px;
+    width: 320px;
   }
   form div {
     flex-wrap: wrap;
