--- a/styles.scss
+++ b/styles.scss
@@ -7,12 +7,6 @@ body {
   color: #212121;
   margin: 0;
 
-  hr {
-    margin-bottom: 21px;
-    border-top: 0;
-    border-color: #d4d4d4 !important;
-  }
-
   h3 {
     margin-bottom: 20px;
   }
@@ -57,33 +51,38 @@ header {
 nav {
   display: flex;
   justify-content: center;
-  margin-bottom: 10px;
-
-  ul {
-    list-style: none;
-    padding: 0;
-
-    li {
-      display: inline-block;
-      position: relative;
+  margin-bottom: 20px;
   
-      a {
-        color: #737373;
-        display: block;
-        padding: 8px 12px;
-        border-radius: 5%;
-        text-decoration: none;
+  div {
+    padding: 0 20px 10px;
+    border-bottom: 1px solid #d4d4d4;
 
-        &:hover, &:focus {
-          transition: 1s linear;
-          background: #525252;
-          color: #fafafa;
-        }
-
-        &:active {
-          background: bisque;
-          border-color: #666;
-          color: #efefef;
+    ul {
+      list-style: none;
+      padding: 0;
+  
+      li {
+        display: inline-block;
+        position: relative;
+    
+        a {
+          color: #737373;
+          display: block;
+          padding: 8px 12px;
+          border-radius: 5%;
+          text-decoration: none;
+  
+          &:hover, &:focus {
+            transition: 1s linear;
+            background: #525252;
+            color: #fafafa;
+          }
+  
+          &:active {
+            background: bisque;
+            border-color: #666;
+            color: #efefef;
+          }
         }
       }
     }
@@ -167,6 +166,7 @@ form {
     
     input {
       width: 60%;
+      margin-right: 12%;
       border: 2px solid #e2e8f0;
       border-radius: 2px;
     }
@@ -186,13 +186,39 @@ form {
   }
 }
 
+@media only screen and (max-width: 820px) {
+  article {
+    width: 85%;
+  }
+
+  form {
+    max-width: 380px;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  form {
+    width: 360px;
+
+    div input {
+      margin-right: 0;
+      width: 65%;
+    }
+  }
+}
+
 @media only screen and (max-width: 400px) {
+  nav div {
+    width: 100%;
+  }
+
   article hr {
     width: 225px;
   }
 
   form {
     padding: 22px 10px 38px;
+    width: 320px;
 
     div {
       flex-wrap: wrap;
