--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
+*, ::before, ::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #fafafa;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #212121;
-  margin: 0;
 }
 body h3 {
   margin-bottom: 20px;
+}
+body h4 {
+  margin-bottom: 5px;
 }
 body a {
   color: #212121;
@@ -15,7 +23,6 @@ body input[type=submit]:hover {
 }
 
 header {
-  margin-top: 0;
   margin-bottom: 10px;
   padding: 25px 0 30px;
   border-bottom: 2px solid #a3a3a3;
@@ -25,7 +32,6 @@ header h1 {
   color: #bf4080;
   font-size: 2.5rem;
   text-align: center;
-  margin: 0;
 }
 header h1 span {
   color: #cf649a;
@@ -44,12 +50,11 @@ nav {
   margin-bottom: 20px;
 }
 nav div {
-  padding: 0 20px 10px;
+  padding: 0 20px 18px;
   border-bottom: 1px solid #d4d4d4;
 }
 nav div ul {
   list-style: none;
-  padding: 0;
 }
 nav div ul li {
   display: inline-block;
@@ -87,7 +92,6 @@ nav div ul li a:active {
 }
 
 article {
-  box-sizing: border-box;
   width: 80%;
   padding: 22px 40px;
   margin: 0 auto 35px;
@@ -97,10 +101,10 @@ article {
   border-radius: 3px;
 }
 article p {
-  padding-bottom: 4px;
+  margin-bottom: 10px;
 }
 article p:last-of-type {
-  padding-bottom: 0;
+  margin-bottom: 0;
 }
 article ul {
   padding-left: 14px;
@@ -110,6 +114,12 @@ article ul li {
 }
 article hr {
   margin: 20px 0;
+  border-top: 0;
+  border-color: #d4d4d4;
+}
+
+#differences-content hr {
+  border-color: #a3a3a3;
 }
 
 section {
@@ -119,7 +129,6 @@ section {
 form {
   max-width: 500px;
   padding: 45px 0;
-  box-sizing: border-box;
   margin: auto;
   border: 1px solid #cbd5e1;
   background-color: white;
@@ -130,7 +139,6 @@ form div {
 }
 form div label, form div input {
   padding: 0.5rem;
-  box-sizing: border-box;
   justify-content: space-between;
   font-size: 1.1rem;
 }
