--- a/styles.scss
+++ b/styles.scss
@@ -1,17 +1,17 @@
-$text-color: #212121;
-$secondary-color: #fafafa;
-$bg-color: white;
-$border-color: #cbd5e1;
-$divider-color: #d4d4d4;
+@use 'siteColors' as *;
+@use 'reset';
 
 body {
   background: $secondary-color;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: $text-color;
-  margin: 0;
 
   h3 {
     margin-bottom: 20px;
+  }
+
+  h4 {
+    margin-bottom: 5px;
   }
 
   a {
@@ -24,7 +24,6 @@ body {
 }
 
 header {
-  margin-top: 0;
   margin-bottom: 10px;
   padding: 25px 0 30px;
   border-bottom: 2px solid #a3a3a3;
@@ -34,7 +33,6 @@ header {
     color: #bf4080;
     font-size: 2.5rem;
     text-align: center;
-    margin: 0;
   
     span {
       color: #cf649a;
@@ -57,12 +55,11 @@ nav {
   margin-bottom: 20px;
   
   div {
-    padding: 0 20px 10px;
+    padding: 0 20px 18px;
     border-bottom: 1px solid $divider-color;
 
     ul {
       list-style: none;
-      padding: 0;
   
       li {
         display: inline-block;
@@ -108,7 +105,6 @@ nav {
 }
 
 article {
-  box-sizing: border-box;
   width: 80%;
   padding: 22px 40px;
   margin: 0 auto 35px;
@@ -118,10 +114,10 @@ article {
   border-radius: 3px;
   
   p {
-    padding-bottom: 4px;
+    margin-bottom: 10px;
 
     &:last-of-type {
-      padding-bottom: 0;
+      margin-bottom: 0;
     }
   }
 
@@ -133,10 +129,15 @@ article {
     }
   }
 
-
   hr {
     margin: 20px 0;
+    border-top: 0;
+    border-color: $divider-color;
   }
+}
+
+#differences-content hr {
+  border-color: $divider-color-dark;
 }
 
 section {
@@ -146,7 +147,6 @@ section {
 form {
   max-width: 500px;
   padding: 45px 0;
-  box-sizing: border-box;
   margin: auto;
   border: 1px solid $border-color;
   background-color: $bg-color;
@@ -157,7 +157,6 @@ form {
 
     label, input {
       padding: 0.5rem;
-      box-sizing: border-box;
       justify-content: space-between;
       font-size: 1.1rem;
     }
