--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,6 @@
-@use 'siteColors' as *;
 @use 'reset';
+@use 'siteColors' as *;
+@use 'mixins' as *;
 
 body {
   background: $secondary-color;
@@ -26,7 +27,7 @@ body {
 header {
   margin-bottom: 10px;
   padding: 25px 0 30px;
-  border-bottom: 2px solid #a3a3a3;
+  border-bottom: 2px solid $divider-color-dark;
   background: $bg-color;
   
   h1 {
@@ -105,13 +106,7 @@ nav {
 }
 
 article {
-  width: 80%;
-  padding: 22px 40px;
-  margin: 0 auto 35px;
-  background-color: $bg-color;
-  border: 2px solid $border-color;
-  background-color: $bg-color;
-  border-radius: 3px;
+  @include article-settings(80%);
   
   p {
     margin-bottom: 10px;
@@ -145,11 +140,7 @@ section {
 }
 
 form {
-  max-width: 500px;
-  padding: 45px 0;
-  margin: auto;
-  border: 1px solid $border-color;
-  background-color: $bg-color;
+  @include form-settings(500px);
 
   div {
     display: flex;
