--- a/styles.scss
+++ b/styles.scss
@@ -2,11 +2,7 @@
 @use 'siteColors' as *;
 @use 'mixins' as *;
 
-body {
-  background: $secondary-color;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: $text-color;
-
+%headings {
   h3 {
     margin-bottom: 20px;
   }
@@ -18,6 +14,13 @@ body {
   a {
     color: $text-color;
   }
+}
+
+body {
+  background: $secondary-color;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: $text-color;
+  @extend %headings;
 
   input[type="submit"]:hover {
     cursor: pointer;
@@ -107,6 +110,8 @@ nav {
 
 article {
   @include article-settings(80%);
+  background-color: $bg-color;
+  border: 2px solid $border-color;
   
   p {
     margin-bottom: 10px;
@@ -141,6 +146,8 @@ section {
 
 form {
   @include form-settings(500px);
+  border: 1px solid $border-color;
+  background-color: $bg-color;
 
   div {
     display: flex;
