--- a/styles.scss
+++ b/styles.scss
@@ -28,10 +28,14 @@ body {
 }
 
 header {
-  margin-bottom: 10px;
   padding: 25px 0 30px;
   border-bottom: 2px solid $divider-color-dark;
   background: $bg-color;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  height: 120px;
+  width: 100vw;
   
   h1 {
     color: #bf4080;
@@ -53,10 +57,73 @@ header {
   }
 }
 
+.sidebar-container {
+  height: 100%;
+  position: fixed;
+  top: 120px;
+
+  .sidebar {
+    width: 300px;
+    height: 100%;
+    background: linear-gradient(90deg, #262626 98%, #fafafa 100%);
+    user-select: none;
+  
+    &_header {
+      display: flex;
+      align-items: center;
+      padding: 16px;
+      font-size: 26px;
+      text-align: center;
+      background: linear-gradient(90deg, #0891b2 98%, #fafafa 100%);
+      gap: 15px;
+      
+      &_title {
+        color: white;
+        
+        h5 {
+          font-weight: 600;
+
+        }
+      }
+    }
+
+    &_list {
+      &_item {
+        display: flex;
+        padding: 18px 18px 15px;
+        gap: 10px;
+        cursor: pointer;
+        color: white;
+        transition: all 0.5s ease;
+
+        a {
+          display: flex;
+          width: 100%;
+          color: white;
+          text-decoration: none;
+        }
+
+        &_title {
+          margin-left: 10px;
+        }
+
+        &:hover {
+          background: dodgerblue;
+        }
+      }
+    }
+  }
+}
+
+.page-content {
+  margin-left: 300px;
+  margin-top: 135px;
+}
+
 nav {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin: 10px 0 20px;
   
   div {
     padding: 0 20px 18px;
@@ -92,7 +159,6 @@ nav {
     }
   }
 }
-
 
 #page-title {
   display: flex;
@@ -186,6 +252,21 @@ form {
   }
 }
 
+@media only screen and (max-width: 1080px) {
+  .sidebar-container .sidebar {
+    width: 250px;
+
+    h5 {
+      font-size: 24px;
+      font-weight: 500;
+    }
+  }
+
+  .page-content {
+    margin-left: 250px;
+  }
+}
+
 @media only screen and (max-width: 820px) {
   article {
     width: 85%;
@@ -193,6 +274,16 @@ form {
 
   form {
     max-width: 380px;
+  }
+}
+
+@media only screen and (max-width: 620px) {
+  .sidebar-container {
+    display: none;
+  }
+
+  .page-content {
+    margin-left: 0;
   }
 }
 
