--- a/mixins.scss
+++ b/mixins.scss
@@ -10,3 +10,27 @@
   padding: 45px 0;
   margin: auto;
 }
+
+@mixin tabletLandscapeView {
+  @media only screen and (max-width: 1080px) {
+    @content;
+  }
+}
+
+@mixin tabletView {
+  @media only screen and (max-width: 820px) {
+    @content;
+  }
+}
+
+@mixin tabletSmallView {
+  @media only screen and (max-width: 620px) {
+    @content;
+  }
+}
+
+@mixin phoneLargeView {
+  @media only screen and (max-width: 560px) {
+    @content;
+  }
+}
