--- a/styles.css
+++ b/styles.css
@@ -71,11 +71,19 @@ header h1 .logo-text-gray {
   background: linear-gradient(90deg, #0891b2 98%, #fafafa 100%);
   gap: 15px;
 }
-.sidebar-container .sidebar_header_title {
-  color: white;
-}
 .sidebar-container .sidebar_header_title h5 {
+  color: white;
   font-weight: 600;
+}
+@media only screen and (max-width: 620px) {
+  .sidebar-container .sidebar_header_title h5 {
+    display: none;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .sidebar-container .sidebar_header {
+    padding: 8px;
+  }
 }
 .sidebar-container .sidebar_list_item {
   display: flex;
@@ -91,16 +99,65 @@ header h1 .logo-text-gray {
   color: white;
   text-decoration: none;
 }
+@media only screen and (max-width: 620px) {
+  .sidebar-container .sidebar_list_item_img {
+    margin: 0 auto;
+  }
+}
 .sidebar-container .sidebar_list_item_title {
   margin-left: 10px;
 }
+@media only screen and (max-width: 620px) {
+  .sidebar-container .sidebar_list_item_title {
+    display: none;
+  }
+}
 .sidebar-container .sidebar_list_item:hover {
   background: dodgerblue;
+}
+@media only screen and (max-width: 620px) {
+  .sidebar-container .sidebar_list {
+    margin-top: 8px;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  .sidebar-container .sidebar {
+    width: 250px;
+  }
+  .sidebar-container .sidebar h5 {
+    font-size: 24px;
+    font-weight: 500;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .sidebar-container .sidebar {
+    width: 90px;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .sidebar-container .sidebar {
+    width: 75px;
+  }
 }
 
 .page-content {
   margin-left: 300px;
   margin-top: 135px;
+}
+@media only screen and (max-width: 1080px) {
+  .page-content {
+    margin-left: 250px;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .page-content {
+    margin-left: 90px;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .page-content {
+    margin-left: 75px;
+  }
 }
 
 nav {
@@ -135,6 +192,16 @@ nav div ul li a:active {
   background: bisque;
   border-color: #666;
   color: #efefef;
+}
+@media only screen and (max-width: 560px) {
+  nav div {
+    padding: 0 0 18px;
+    width: 100%;
+    text-align: center;
+  }
+  nav div .shorten-text {
+    display: none;
+  }
 }
 
 #page-title {
@@ -174,6 +241,16 @@ article hr {
   margin: 20px 0;
   border-top: 0;
   border-color: #d4d4d4;
+}
+@media only screen and (max-width: 820px) {
+  article {
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 560px) {
+  article {
+    padding: 18px 24px 22px;
+  }
 }
 
 #differences-content hr {
@@ -221,33 +298,9 @@ form div:last-of-type input {
   font-size: 17px;
   text-transform: uppercase;
 }
-
-@media only screen and (max-width: 1080px) {
-  .sidebar-container .sidebar {
-    width: 250px;
-  }
-  .sidebar-container .sidebar h5 {
-    font-size: 24px;
-    font-weight: 500;
-  }
-  .page-content {
-    margin-left: 250px;
-  }
-}
 @media only screen and (max-width: 820px) {
-  article {
-    width: 85%;
-  }
-  form {
+  form div {
     max-width: 380px;
-  }
-}
-@media only screen and (max-width: 620px) {
-  .sidebar-container {
-    display: none;
-  }
-  .page-content {
-    margin-left: 0;
   }
 }
 @media only screen and (max-width: 560px) {
@@ -259,10 +312,8 @@ form div:last-of-type input {
     width: 65%;
   }
 }
+
 @media only screen and (max-width: 400px) {
-  nav div {
-    width: 100%;
-  }
   article hr {
     width: 225px;
   }
