--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@
 @use 'siteColors' as *;
 @use 'mixins' as *;
 
-%headings {
+%text-settings {
   h3 {
     margin-bottom: 20px;
   }
@@ -20,7 +20,7 @@ body {
   background: $secondary-color;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: $text-color;
-  @extend %headings;
+  @extend %text-settings;
 
   input[type="submit"]:hover {
     cursor: pointer;
@@ -67,7 +67,7 @@ header {
     height: 100%;
     background: linear-gradient(90deg, #262626 98%, #fafafa 100%);
     user-select: none;
-  
+
     &_header {
       display: flex;
       align-items: center;
@@ -77,16 +77,20 @@ header {
       background: linear-gradient(90deg, #0891b2 98%, #fafafa 100%);
       gap: 15px;
       
-      &_title {
+      &_title h5 {
         color: white;
-        
-        h5 {
-          font-weight: 600;
-
+        font-weight: 600;
+  
+        @include tabletSmallView {
+          display: none;
         }
       }
-    }
 
+      @include phoneLargeView {
+        padding: 8px;
+      }
+    }
+  
     &_list {
       &_item {
         display: flex;
@@ -95,22 +99,54 @@ header {
         cursor: pointer;
         color: white;
         transition: all 0.5s ease;
-
+  
         a {
           display: flex;
           width: 100%;
           color: white;
           text-decoration: none;
+
         }
 
+        &_img {
+          @include tabletSmallView {
+            margin: 0 auto;
+          }
+        }
+  
         &_title {
           margin-left: 10px;
+  
+          @include tabletSmallView {
+            display: none;
+          }
         }
-
+  
         &:hover {
           background: dodgerblue;
         }
       }
+
+      @include tabletSmallView {
+        margin-top: 8px;
+      }
+    }    
+
+    @include tabletLandscapeView {
+      width: 250px;
+  
+      h5 {
+        font-size: 24px;
+        font-weight: 500;
+      }
+    }
+
+    @include tabletSmallView {
+      width: 90px;
+    }
+
+    @include phoneLargeView {
+      width: 75px;
     }
   }
 }
@@ -118,6 +154,18 @@ header {
 .page-content {
   margin-left: 300px;
   margin-top: 135px;
+
+  @include tabletLandscapeView {
+    margin-left: 250px;
+  }
+
+  @include tabletSmallView {
+    margin-left: 90px;
+  }
+
+  @include phoneLargeView {
+    margin-left: 75px;
+  }
 }
 
 nav {
@@ -155,6 +203,16 @@ nav {
             color: #efefef;
           }
         }
+      }
+    }
+
+    @include phoneLargeView {
+      padding: 0 0 18px;
+      width: 100%;
+      text-align: center;
+      
+      .shorten-text {
+        display: none;
       }
     }
   }
@@ -199,6 +257,14 @@ article {
     margin: 20px 0;
     border-top: 0;
     border-color: $divider-color;
+  }
+
+  @include tabletView {
+    width: 90%;
+  }
+
+  @include phoneLargeView {
+    padding: 18px 24px 22px;
   }
 }
 
@@ -249,46 +315,13 @@ form {
         text-transform: uppercase;
       }
     }
-  }
-}
 
-@media only screen and (max-width: 1080px) {
-  .sidebar-container .sidebar {
-    width: 250px;
-
-    h5 {
-      font-size: 24px;
-      font-weight: 500;
+    @include tabletView {
+      max-width: 380px;
     }
   }
 
-  .page-content {
-    margin-left: 250px;
-  }
-}
-
-@media only screen and (max-width: 820px) {
-  article {
-    width: 85%;
-  }
-
-  form {
-    max-width: 380px;
-  }
-}
-
-@media only screen and (max-width: 620px) {
-  .sidebar-container {
-    display: none;
-  }
-
-  .page-content {
-    margin-left: 0;
-  }
-}
-
-@media only screen and (max-width: 560px) {
-  form {
+  @include phoneLargeView {
     width: 360px;
 
     div input {
@@ -299,10 +332,6 @@ form {
 }
 
 @media only screen and (max-width: 400px) {
-  nav div {
-    width: 100%;
-  }
-
   article hr {
     width: 225px;
   }
