--- a/styles.css
+++ b/styles.css
@@ -242,6 +242,11 @@ article hr {
   border-top: 0;
   border-color: #d4d4d4;
 }
+@media only screen and (max-width: 400px) {
+  article hr {
+    width: 225px;
+  }
+}
 @media only screen and (max-width: 820px) {
   article {
     width: 90%;
@@ -277,15 +282,39 @@ form div label, form div input {
   justify-content: space-between;
   font-size: 1.1rem;
 }
+@media only screen and (max-width: 400px) {
+  form div label, form div input {
+    width: 100%;
+    text-align: left;
+    padding-left: 0;
+    margin-bottom: 4px;
+  }
+}
 form div label {
   width: 30%;
   text-align: right;
+}
+@media only screen and (max-width: 560px) {
+  form div label {
+    display: none;
+  }
 }
 form div input {
   width: 60%;
   margin-right: 12%;
   border: 2px solid #e2e8f0;
   border-radius: 2px;
+}
+@media only screen and (max-width: 560px) {
+  form div input {
+    width: 90%;
+    margin-right: 0;
+  }
+}
+@media only screen and (max-width: 400px) {
+  form div input {
+    padding-left: 8px;
+  }
 }
 form div:last-of-type {
   margin-bottom: 0;
@@ -298,46 +327,33 @@ form div:last-of-type input {
   font-size: 17px;
   text-transform: uppercase;
 }
+@media only screen and (max-width: 400px) {
+  form div:last-of-type input {
+    text-align: center;
+    padding-left: 0;
+    margin-top: 20px;
+  }
+}
 @media only screen and (max-width: 820px) {
   form div {
     max-width: 380px;
   }
 }
 @media only screen and (max-width: 560px) {
-  form {
-    width: 360px;
-  }
-  form div input {
-    margin-right: 0;
-    width: 65%;
+  form div {
+    max-width: 300px;
+    margin: 22px auto;
+    justify-content: center;
   }
 }
-
-@media only screen and (max-width: 400px) {
-  article hr {
-    width: 225px;
+@media only screen and (max-width: 560px) {
+  form {
+    width: 100%;
+    padding: 5px 25px 25px;
   }
+}
+@media only screen and (max-width: 400px) {
   form {
     padding: 22px 10px 38px;
-    width: 320px;
-  }
-  form div {
-    flex-wrap: wrap;
-    margin: 0 auto;
-    width: 80%;
-  }
-  form div label, form div input {
-    width: 100%;
-    text-align: left;
-    padding-left: 0;
-    margin-bottom: 4px;
-  }
-  form div input {
-    padding-left: 8px;
-  }
-  form div:last-of-type input {
-    text-align: center;
-    padding-left: 0;
-    margin-top: 20px;
   }
 }/*# sourceMappingURL=styles.css.map */
