--- a/styles.scss
+++ b/styles.scss
@@ -202,6 +202,11 @@ nav {
             border-color: #666;
             color: #efefef;
           }
+
+          @include phoneSmallView {
+            font-size: 14px;
+            font-weight: 600;
+          }
         }
       }
     }
