--- a/styles.scss
+++ b/styles.scss
@@ -76,6 +76,10 @@ header {
       text-align: center;
       background: linear-gradient(90deg, #0891b2 98%, #fafafa 100%);
       gap: 15px;
+
+      &:hover {
+        background: linear-gradient(90deg, #06b6d4 98%, #fafafa 100%);
+      }
       
       &_title h5 {
         color: white;
@@ -123,7 +127,7 @@ header {
         }
   
         &:hover {
-          background: dodgerblue;
+          background: #0891b2;
         }
       }
 
@@ -205,7 +209,6 @@ nav {
 
           @include phoneSmallView {
             font-size: 14px;
-            font-weight: 600;
           }
         }
       }
@@ -293,6 +296,10 @@ form {
   div {
     display: flex;
     margin-bottom: 30px;
+    
+    svg {
+      margin: 0 auto;
+    }
 
     label, input {
       padding: 0.5rem;
@@ -342,11 +349,16 @@ form {
         font-weight: 600;
         font-size: 17px;
         text-transform: uppercase;
+        background-color: #f59e0b;
+
+        &:hover {
+          background: #d97706;
+        }
 
         @include phoneSmallView {
           text-align: center;
           padding-left: 0;
-          margin-top: 20px;
+          margin-top: 0;
         }
       }
     }
@@ -360,6 +372,12 @@ form {
       margin: 22px auto;
       justify-content: center;
     }
+  }
+
+  p {
+    text-align: center;
+    margin-bottom: 28px;
+    margin-top: -1px;
   }
 
   @include phoneLargeView {
